22/head
decode.cc:1:18: error: variable or field ‘decode’ declared void
 void decode(std::istream &is, std::ostream &os)
                  ^~~~~~~
decode.cc:1:18: error: ‘istream’ is not a member of ‘std’
decode.cc:1:27: error: ‘is’ was not declared in this scope
 void decode(std::istream &is, std::ostream &os)
                           ^~
decode.cc:1:36: error: ‘ostream’ is not a member of ‘std’
 void decode(std::istream &is, std::ostream &os)
                                    ^~~~~~~
decode.cc:1:45: error: ‘os’ was not declared in this scope
 void decode(std::istream &is, std::ostream &os)
                                             ^~
hextodex.cc:2:1: error: ‘size_t’ does not name a type
 size_t hexToDec(std::string str)
 ^~~~~~
isother.cc: In function ‘bool isOther(char)’:
isother.cc:3:10: error: ‘string’ is not a member of ‘std’
     std::string others = "-_.~";                          // chars to skip
          ^~~~~~
isother.cc:4:12: error: ‘others’ was not declared in this scope
     return others.find(ch) != std::string::npos;
            ^~~~~~
isother.cc:4:36: error: ‘std::string’ has not been declared
     return others.find(ch) != std::string::npos;
                                    ^~~~~~
usage.cc:1:19: error: variable or field ‘usage’ declared void
 void usage(string const &programName)
                   ^~~~~
usage.cc:1:12: error: ‘string’ was not declared in this scope
 void usage(string const &programName)
            ^~~~~~
usage.cc:1:12: note: suggested alternative: ‘struct’
 void usage(string const &programName)
            ^~~~~~
            struct
dectohex.cc:1:6: error: ‘string’ in namespace ‘std’ does not name a type
 std::string decToHex(size_t num)
      ^~~~~~
getopt.cc:1:1: error: ‘EOption’ does not name a type
 EOption getOpt(std::string opt)         // should be in seperate file?
 ^~~~~~~
encode.cc:1:18: error: variable or field ‘encode’ declared void
 void encode(std::istream &is, std::ostream &os)
                  ^~~~~~~
encode.cc:1:18: error: ‘istream’ is not a member of ‘std’
encode.cc:1:27: error: ‘is’ was not declared in this scope
 void encode(std::istream &is, std::ostream &os)
                           ^~
encode.cc:1:36: error: ‘ostream’ is not a member of ‘std’
 void encode(std::istream &is, std::ostream &os)
                                    ^~~~~~~
encode.cc:1:45: error: ‘os’ was not declared in this scope
 void encode(std::istream &is, std::ostream &os)
                                             ^~
